--- a/package.json
+++ b/package.json
@@ -5,24 +5,25 @@
     "author": "31k5",
     "license": "MIT",
     "description": "Modal component for hr-net-front",
+    "type": "module",
     "scripts": {
         "build": "tsx",
-        "rollup": "rollup -c"
+        "rollup": "rollup -c --bundleConfigAsCjs"
     },
     "devDependencies": {
-        "@rollup/plugin-commonjs": "^22.0.0",
-        "@rollup/plugin-node-resolve": "^13.3.0",
-        "@rollup/plugin-typescript": "^8.3.3",
-        "@types/node": "^18.0.0",
-        "@types/react": "^18.0.13",
-        "rollup": "^2.75.6",
-        "rollup-plugin-dts": "^4.2.2",
+        "@jridgewell/sourcemap-codec": "^1.4.15",
+        "@rollup/plugin-commonjs": "^25.0.1",
+        "@rollup/plugin-node-resolve": "^15.1.0",
+        "@rollup/plugin-terser": "^0.4.3",
+        "@rollup/plugin-typescript": "^11.1.1",
+        "@types/node": "^20.3.1",
+        "@types/react": "^18.2.12",
+        "rollup": "^3.25.1",
+        "rollup-plugin-dts": "^5.3.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-postcss": "^4.0.2",
-        "@rollup/plugin-terser": "^0.4.3",
-        "@jridgewell/sourcemap-codec": "^1.4.15",
-        "tslib": "^2.4.0",
-        "typescript": "^4.7.3"
+        "tslib": "^2.5.3",
+        "typescript": "^5.1.3"
     },
     "peerDependencies": {
         "react": "^18.2.0"
@@ -34,5 +35,6 @@
     ],
     "types": "dist/index.d.ts",
     "dependencies": {
+        "sass": "^1.63.6"
     }
 }
