--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "description": "Modal component for hr-net-front",
     "type": "module",
     "publishConfig": {
-        "@Eiks-exe:registry": "https://npm.pkg.github.com"
+        "@31k5:registry": "https://npm.pkg.github.com"
       },
     "scripts": {
         "build": "tsx",
