--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -8,6 +8,9 @@ on:
     branches:
       - master
 
+jobs:
+
+
   publish-gpr:
     runs-on: ubuntu-latest
     permissions:
@@ -20,7 +23,6 @@ on:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
-      - run: npm run rollup
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
