--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -20,8 +20,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 16.x
           registry-url: https://npm.pkg.github.com/
+          scope: '@eiks-exe'
       - run: npm ci
       - run: npm publish
         env:
