--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -25,7 +25,7 @@ jobs:
           scope: '@eiks-exe'
       - name: Authenticate with the GitHub Package Registry
         run:
-          echo "//npm.pkg.github.com:_authToken=${{ secrets.GITHUB_TOKEN }}" >
+          echo "//npm.pkg.github.com:_authToken=${{ secrets.GHP_TOKEN }}" >
           ~/.npmrc      
       - run: npm ci
       - run: npm run rollup
