--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "@eiks-exe/hrnet-modal-component",
-    "version": "0.0.2",
-    "private": false,
+    "version": "0.0.3",
     "author": "31k5",
     "license": "MIT",
     "description": "Modal component for hr-net-front",
     "type": "module",
-    "publishConfig": {
-        "@eiks-exe:registry": "https://npm.pkg.github.com"
-      },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Eiks-exe/hrnet-modal-component.git"
+    },
     "scripts": {
         "build": "tsx",
         "rollup": "rollup -c --bundleConfigAsCjs"
